--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,11 @@
-thymeleaf2=Thymeleaf Data Verisi
+thymeleaf2=Thymeleaf -2
+studentId=Ö?renci ID
+studentName=Ö?renci Ad?
+studentSurname=Ö?renci Soyad?
 
-student_id=Ö?renci ID
-student_name=Ö?renci ADI
-student_surname=Ö?renci SOYADI
+#Register
+registerId= register Id
+registerName= register Name
+registerSurname= register Surname
+registerEmail= register Email
+registerDate= register Date
