Flower (Create-List-Delete)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,12 @@ registerName= register Name
 registerSurname= register Surname
 registerEmail= register Email
 registerDate= register Date
+
+# flower
+flower_id= ID
+flower_name= Çiçek ad?
+flower_type= Çiçek Türü
+flower_price= Çiçek Fiyat?
+flower_delete=Silmek
+flower_update=Güncelle
+flower_show=Göster
